# sports-betting

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  analisar_historico_apostas.py  analisar_historico_apostas_ultimos_3_meses.py  docker-compose.yml  gerar_relatorio_comparativo.py  gerar_relatorio_executivo.py  pyproject.toml  run.ps1
.github/workflows/: ci.yml  lint.yml
app/: Home.py  common.py  components.py  filters.py  formatting.py  translations.py
app/pages/: 1_Overview.py  2_Strategies.py  3_Markets.py  4_CLV.py  5_Bankroll.py  6_Risk.py  7_Data_Quality.py
bet_audit/: __init__.py  cli.py  config.py  pipeline.py
bet_audit/ai/: anthropic_provider.py  base_llm.py  classifier.py  openai_provider.py
bet_audit/consolidation/: consolidator.py  desplanilhadas.py
bet_audit/export/: exporter.py
bet_audit/search/: base.py  matcher.py  models.py  resolver.py
data/marts/: data_quality_report.csv  dim_bookmaker.csv  dim_date.csv  dim_league.csv  dim_market.csv  dim_strategy.csv  dim_team.csv  fact_bankroll_evolution.csv  fact_bankroll_scenarios.csv  fact_bets.csv  (+14 more)
docs/: architecture.md  assumptions_limitations.md  case_study.md  data_dictionary.md  data_sources.md  linkedin_content.md  linkedin_post_examples.md  methodology.md  metrics.md  publishing_and_releases.md  recruiter_summary.md  risk_governance.md
notebooks/: exploratory_analysis.ipynb  prototype_metrics.ipynb
src/: main.py
tests/: conftest.py  test_ai_providers.py  test_analise_apostas.py  test_bet_audit.py  test_data_quality.py  test_ingestion.py  test_metrics.py  test_risk_rules.py  test_simulation.py
(+30 files in other folders)
