[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-betting-intelligence-engine"
version = "0.1.0"
description = "Analytics platform for performance and risk governance in sports-market strategies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Portfolio Engineering Project" }]
dependencies = [
  "duckdb>=1.0.0,<2.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pandera>=0.20.0,<1.0.0",
  "plotly>=5.22.0,<6.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "streamlit>=1.36.0,<2.0.0",
  "openpyxl>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
ai = [
  "openai>=1.0.0",
  "anthropic>=0.30.0",
]
dev = [
  "black>=24.4.0,<25.0.0",
  "mypy>=1.10.0,<2.0.0",
  "pre-commit>=3.7.0,<4.0.0",
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.5.0,<0.7.0",
  "openai>=1.0.0",
  "anthropic>=0.30.0",
]

[project.scripts]
sbie = "src.main:main"
bet-audit = "bet_audit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "bet_audit*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E203", "E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
